# Meeting-Notes-Summarizer

./: .gitignore  DEPLOYMENT.md  README.md  sample-meeting-transcript.txt
backend/: .env.example  main.py  pyproject.toml  render.yaml  requirements.txt
frontend/: index.html
frontend/src/: App.css  App.tsx
